syntax = "proto3";

package friend.service.friend;

service Friend {
	rpc Add(AddRequest) returns (Response) {}
	rpc Del(Request) returns (Response) {}
	rpc List(ListRequest) returns (Response) {}
	rpc Get(Request) returns (Response) {}
}

message friend {
	int64 id = 1;
	int64 userId = 2;
}

message Request {
	int64 friendId = 1;
}

message Response {
	int64 code = 1;
	string message = 2;
	friend friend = 3;
	repeated friend list = 4;
}

message AddRequest {
	int64 operatorId = 1;
	int64 buddyId = 2;
}

message ListRequest {
	int64 operatorId = 1;
	int64 offset = 2;
	int64 limit = 3;
}
